--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon ./app.js",
     "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,11 +14,15 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.4",
+    "pg": "^8.4.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
   }
 }
